--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ required: sudo
 services:
   - docker
 before_install:
+  - openssl aes-256-cbc -K $encrypted_8e11297cadd5_key -iv $encrypted_8e11297cadd5_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
-
-  
+  - gcloud config set project multi-k8s-353808
+  - gcloud config set compute/zome asia-south1-a
+  - gcloud container clusters get-credentials multi-cluster
