--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,10 @@ before_install:
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config set project multi-k8s-353808
-  - gcloud config set compute/zome asia-south1-a
+  - gcloud config set compute/zone asia-south1-a
   - gcloud container clusters get-credentials multi-cluster
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker build -t kailashxii/react-test -f ./client/Dockerfile.dev ./client
+
+script:
+  - docker run -e CI=true kailashxii/react-test npm test
