--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,9 @@ before_install:
 
 script:
   - docker run -e CI=true kailashxii/react-test npm test
+
+deploy:
+  provider: script
+  script: bash ./deploy.sh
+  on:
+    branch: master
