--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,14 @@ env:
   global:
     - SHA=$(git rev-parse HEAD)
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
+    - USE_GKE_GCLOUD_AUTH_PLUGIN=1
 before_install:
   - openssl aes-256-cbc -K $encrypted_8e11297cadd5_key -iv $encrypted_8e11297cadd5_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null
   - source $HOME/google-cloud-sdk/path.bash.inc
+  - gcloud components install gke-gcloud-auth-plugin
   - gcloud components update kubectl
+  - gcloud components update
   - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config set project multi-k8s-353808
   - gcloud config set compute/zone asia-south1-a
